--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
-server.port=8080
+server.port=8081
 
+spring.datasource.url=jdbc:postgresql://db.ypcepjcdvnzernudtayv.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=${SUPABASE_SECRET}
 
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+
+logging.file.name=Logs.log
+logging.file.path=**/
 
 
