--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
 server.port=8081
 
-spring.datasource.url=jdbc:postgresql://db.ypcepjcdvnzernudtayv.supabase.co:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=${SUPABASE_SECRET}
+spring.sql.init.platform=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://db.erliksapvbvrisqbruzg.supabase.co:5432/postgres?user=postgres&password=Np!ge83E3iiTKGM
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 
 logging.file.name=Logs.log
 logging.file.path=**/
+
+discount.birthday=0.8
+discount.newyear=0.5
 
 
