--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.url=jdbc:postgresql://db.erliksapvbvrisqbruzg.supabase.co:5432
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
 
 logging=true
 logging.file.name=Logs.log
