--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
 		<version>3.1.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
+	<modules>
+		<module>spring-boot-starter-discount</module>
+	</modules>
+
 	<groupId>com.naukma</groupId>
 	<artifactId>IntroductionSpringProject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
