--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 		<version>3.1.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	<packaging>pom</packaging>
 
 	<modules>
 		<module>spring-boot-starter-discount</module>
