--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#spring.profiles.active=dev
 server.port=8081
 
 spring.sql.init.platform=postgres
@@ -7,7 +8,6 @@ spring.datasource.url=jdbc:postgresql://db.erliksapvbvrisqbruzg.supabase.co:5432
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database=POSTGRESQL
 
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 
