some changes - added all dtos, meal-category one-to-many, phoneNumber for User, OrderService crud usage, smth else

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+
 logging=true
 logging.file.name=Logs.log
 logging.file.path=**/
