--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:postgresql://db.erliksapvbvrisqbruzg.supabase.co:5432
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database=POSTGRESQL
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.generate-ddl=true
 
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
