--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
 			<version>42.5.4</version>
 		</dependency>
 		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
@@ -70,6 +76,11 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.revelc.code.formatter</groupId>
+			<artifactId>jsdt-core</artifactId>
+			<version>2.8.0</version>
 		</dependency>
 	</dependencies>
 
