--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,11 @@
 			<artifactId>jsdt-core</artifactId>
 			<version>2.8.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 
 
