--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.profiles.active=dev
-server.port=8081
-
+server.port=8080
+debug=true
 spring.sql.init.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://db.erliksapvbvrisqbruzg.supabase.co:5432/postgres?user=postgres&password=Np!ge83E3iiTKGM
