--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ logging.file.path=**/
 
 discount.birthday=0.8
 discount.newyear=0.5
+
+application.security.jwt.secret-key=YourSecretKeyForJwt
+application.security.jwt.expiration=3600000
+application.security.jwt.refresh-token.expiration=86400000
