--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ discount.newyear=0.5
 application.security.jwt.secret-key=YourSecretKeyForJwt
 application.security.jwt.expiration=3600000
 application.security.jwt.refresh-token.expiration=86400000
+
+spring.thymeleaf.cache=false
