--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 #spring.profiles.active=dev
 server.port=8080
-
+logging.level.org.springframework.cache=trace
 spring.sql.init.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://db.erliksapvbvrisqbruzg.supabase.co:5432/postgres?user=postgres&password=Np!ge83E3iiTKGM
-logging.level.org.springframework.security=DEBUG
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database=POSTGRESQL
 
 spring.jpa.hibernate.ddl-auto=validate
