--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.6.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "cors": "^2.8.5",
     "fs": "^0.0.1-security",
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^6.1.0",
