--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,6 +11,11 @@ spring.jpa.generate-ddl=true
 
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 
+spring.mvc.cors.mapping=/**
+spring.mvc.cors.allowed-origins=http://localhost:3000
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.mvc.cors.allowed-headers=*
+
 logging=true
 logging.file.name=Logs.log
 logging.file.path=**/
