--- a/server/src/main/resources/application-dev.properties
+++ b/server/src/main/resources/application-dev.properties
@@ -2,4 +2,9 @@ spring.jpa.show-sql=true
 
 spring.datasource.hikari.maximum-pool-size=10
 
+spring.mvc.cors.mapping=/**
+spring.mvc.cors.allowed-origins=http://localhost:3000
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.mvc.cors.allowed-headers=*
+
 
