--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 
 spring.mvc.cors.mapping=/**
 spring.mvc.cors.allowed-origins=http://localhost:3000
-spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.mvc.cors.allowed-headers=*
 
 logging=true
